# codeorient-test-case

./: CMakeLists.txt  README.md
app/: main.cpp
app/src/: Endpoints.hpp  FileWriter.hpp  IReader.hpp  IWriter.hpp  StdInReader.hpp
build_vscode/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json  newFile.txt  rules.ninja  tee
build_vscode/.cmake/api/v1/reply/: cache-v2-ec5da3227b0c95194ee3.json  codemodel-v2-7cdc04301bf47f3e2d5e.json  index-2021-10-06T10-14-12-0391.json  target-argstest-Debug-98a31927ea831605c7a9.json  target-argstest-multiple-inclusion-Debug-c8afb1be7915ecc409f8.json  target-argstest-windows-h-Debug-682903c95d9816496db3.json  target-completion-Debug-949d28e76bc4fa5fb09b.json  target-gitlike-Debug-c95e956725e34a7532fe.json  target-libtee-Debug-a903533d16d9792443f4.json  target-tee-Debug-a4a9cade1f6b1d44cedf.json  target-tee-integration-tests-Debug-64223e300fe5cf4e9f07.json
build_vscode/libs/args/: CTestTestfile.cmake  argstest-multiple-inclusion  argstest-windows-h  cmake_install.cmake  completion  gitlike
build_vscode/tests/integrationTests/: cmake_install.cmake
build_vscode/tests/unitTests/: cmake_install.cmake
tests/integrationTests/: CMakeLists.txt
tests/integrationTests/libs/Catch/single_include/: catch.hpp
tests/integrationTests/src/: FileWriter.cpp  main.cpp
